chore: adicionar configuração do banco H2 no application.properties
- Definir URL do banco como jdbc:h2:mem:pixdb
- Configurar driver, usuário e senha padrão
- Ativar console web do H2 para depuração
- Definir plataforma do Hibernate para H2Dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,6 @@
-spring.profiles.active=h2
-
-spring.datasource.url=jdbc:h2:mem:db_pix
+spring.datasource.url=jdbc:h2:mem:pixdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/db_pix
-#spring.datasource.username=postgres
-#spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Perfil ativo para PostgreSQL
-#spring.profiles.active=postgres
-
