--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
+spring.profiles.active=h2
+
 spring.datasource.url=jdbc:h2:mem:db_pix
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/db_pix
 #spring.datasource.username=postgres
