--- a/pom.xml
+++ b/pom.xml
@@ -104,20 +104,30 @@
                 <version>0.8.8</version>
                 <executions>
                     <execution>
+                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>verify</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>com/desafio/casepixitau/CasePixItauApplication*</exclude>
+                        <exclude>com/desafio/casepixitau/dto/*</exclude>
+                        <exclude>com/desafio/casepixitau/exception/ChavePixException*</exclude>
+                        <exclude>com/desafio/casepixitau/model/ChavePix*</exclude>
+                        <exclude>com/desafio/casepixitau/util/LocalDateTimeSerializer*</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
